update bg and color scheme for level three

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color:#393e46; */
-  background-image: url("assets/double-bubble.png");
+  background-image: url("assets/bush.png");
 }
 
 a {
